[tool.poetry]
name = "pocker"
version = "1.2.0"
description = "CLI tool for docker images, containers, logs and more."
authors = ["pommee"]
readme = "README.md"
homepage = "https://github.com/pommee/Pocker"
repository = "https://github.com/pommee/Pocker"
documentation = "https://github.com/pommee/Pocker"
packages = [{ include = "application" }]

[tool.poetry.dependencies]
python = "^3.11.9"
docker = "^7.0.0"
textual = "^0.59.0"
black = "^24.4.2"
textual-dev = "^1.5.1"
pyyaml = "^6.0.1"
pydantic = "^2.7.3"

[tool.poetry.scripts]
pocker = "application.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
